<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailPemesan">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivLogoData"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_agreement" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="Data Pemesan"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/tvCek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Silahkan periksa kembali data pemesan"
                android:textAlignment="center"
                android:textColor="@color/colorBlack" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorWhite"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nomor_tilang"
                        android:textColor="@color/colorBlack"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/tvidTilang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/d221098"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nama"
                        android:textColor="@color/colorBlack"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/tvNama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/fathurrohman"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/jenis_kendaraan"
                        android:textColor="@color/colorBlack"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/tvJenisKendaraan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/sepeda_motor"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/barang_bukti"
                        android:textColor="@color/colorBlack"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/tvBarangBukti"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/stnk"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/denda"
                        android:textColor="@color/colorBlack"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/tvDenda"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/rp"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Tanggal Sidang"
                        android:textColor="@color/colorBlack"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/tvTglSidang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/_22_oktober_2019"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nama"
                        android:textColor="@color/colorBlack"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/etNama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="Fathurrohman"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nik"
                        android:textColor="@color/colorBlack"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/etNik"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="3327792696996"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Alamat Rumah"
                        android:textColor="@color/colorBlack"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/etAlamatRumah"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="Banyumas"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Nomor HP/WA"
                        android:textColor="@color/colorBlack"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/etNoHP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="08577475887"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Alamat Antar"
                        android:textColor="@color/colorBlack"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/etAlamatAntar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="false"
                        android:inputType="text"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="Jalan Cendrawasih No 22"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Titik Lokasi"
                        android:textColor="@color/colorBlack"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/etLokasi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="false"
                        android:inputType="text"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="-7.22352252, 8.9839397"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Detail Alamat"
                        android:textColor="@color/colorBlack"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/etDetailAlamat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="Gang Merpati, Nomor Rumah 10"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Upload Bukti Tilang"
                        android:textColor="@color/colorBlack"
                        android:textSize="10sp" />

                    <ImageView
                        android:id="@+id/ivBukti"
                        android:layout_width="200dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:clickable="true"
                        android:src="@drawable/ic_camera" />


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tvJudulDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:text="Denda"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/tvNominal"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:text="@string/rp"
                        android:textColor="@color/colorBlack" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:text="Biaya Antar"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/tvAntar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:text="Rp 20.000"
                        android:textColor="@color/colorBlack" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <TextView
                        android:id="@+id/tvTotalDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:text="Total Pembayaran"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:text="Rp 71.000"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />
                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/colorWhite"
                    android:id="@+id/btnScan"
                    android:text="Scan"
                    android:background="@drawable/button_effect" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>